# MATH5030Group11

./: LICENSE  README.md  garch_lnmm_demo.ipynb  pyproject.toml
.github/workflows/: publish.yml
garch_lnmm/: __init__.py  core.py
notebooks/: demo.ipynb
tests/: test_garch_lnmm.py
