[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "garch-lnmm"
version = "0.1.0"
description = "Log-normal moment-matching simulation for GARCH diffusion option pricing"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MATH5030 Group 11" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.7"
]
keywords = ["finance", "monte-carlo", "garch", "option-pricing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/JM357/MATH5030Group11"

[tool.setuptools.packages.find]
where = ["."]
include = ["garch_lnmm*"]
